# carplexity

./: .gitmodules  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
crates/carplexity/: Cargo.toml
crates/carplexity-wasm-bindings/: Cargo.toml
crates/carplexity/assets/models/modules/: ramp_1.blend  ramp_1.blend1
crates/carplexity/assets/music/: brillent_1.opus  cyberdream.opus  escalation.opus
crates/carplexity/src/: account.rs  assets.rs  bot.rs  config.rs  debug.rs  environment.rs  gamemode.rs  gameplay.rs  gui.rs  id.rs  ident_server.rs  input.rs  main.rs  network.rs  object.rs  package.rs  physics.rs  player.rs  room.rs  server.rs  setup.rs  texture.rs  vehicle.rs  version.rs  wasm.rs
crates/carplexity/src/crypto/: hash.rs
crates/carplexity/src/environment/: entity.rs  terrain.rs
crates/carplexity/src/gamemode/: builtin.rs  physics.rs
crates/carplexity/src/gamemode/builtin/: driveball.rs
crates/carplexity/src/gameplay/: color.rs
crates/carplexity/src/gui/: notification.rs
crates/carplexity/src/input/: scheme.rs  vehicle_control.rs
crates/carplexity/src/object/: energy_source.rs
crates/carplexity/src/physics/: rapier.rs
crates/carplexity/src/render/: material.rs
crates/carplexity/src/render/shaders/: pixelation.wgsl
crates/carplexity/src/room/: module.rs  spec.rs  state.rs
crates/carplexity/src/server/: config.rs
crates/carplexity/src/texture/: svg.rs
crates/carplexity/src/vehicle/: control.rs  energy.rs
