[package]
name = "carplexity"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["wayland"] }
glam = "0.29.0"
mockall = "0.13.0"
noise = "0.9.0"
rapier3d = { version = "0.22.0", features = ["serde-serialize"] }
rodio = { version = "0.19.0", features = [
	"symphonia-aac",
], default-features = false }
rustyscript = "0.8.3"
sdl2 = { version = "0.37.0" }
serde_json = "1.0.128"
# tokio = { version = "1.0", features = ["full", "sync"] }
carplexity-wasm-bindings = { path = "../carplexity-wasm-bindings" }
serde = "1.0.210"
sqlx = { version = "0.8.2", features = ["sqlite"] }
winit = "0.30.5"
image = "0.25.4"
uuid = { version = "1.11.0", features = ["v4"] }
clap = { version = "4.5.20", features = ["derive"] }
toml = "0.8.19"
